# SRTfu

./: README.md  pyproject.toml
examples/: README.md
srtfu/: __init__.py  funcs.py  libsrtinstall.py
