
[project]
name = "SRTfu"
version = "0.0.11"
authors = [
  { name="Adrian of Doom ", email="spam@bad.show" },
]
description = "Secure Reliable Transport"
readme = "README.md"
requires-python = ">=3.9"
dependencies=[]

license = "Sleepycat"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/superkabuki/SRTfu"
Issues = "https://github.com/superkabuki/SRTfu/issues"

